@@ -1,3 +1,6 @@
 # PapayaDB
-# PapayaDB
-# PapayaDB
+
+add this line to execute vertx server
+
+--add-exports java.base/sun.nio.ch=ALL-UNNAMED
+--add-exports java.base/sun.net.dns=ALL-UNNAMED
